[gd_scene load_steps=3 format=3 uid="uid://64q0eqdwp3i8"]

[ext_resource type="Script" uid="uid://caff6jt8vxlye" path="res://main_window.gd" id="1_n7l54"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8w8ba"]
bg_color = Color(0.237539, 0.237539, 0.237539, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
expand_margin_left = 4.0
expand_margin_top = 4.0
expand_margin_right = 4.0
expand_margin_bottom = 4.0

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 5.0
offset_top = 5.0
offset_right = -5.0
offset_bottom = -5.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_n7l54")

[node name="Main_Window" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_8w8ba")

[node name="VBoxContainer" type="VBoxContainer" parent="Main_Window"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 0

[node name="HBoxContainer" type="HBoxContainer" parent="Main_Window/VBoxContainer"]
layout_mode = 2
mouse_filter = 0

[node name="TitleBar" type="Label" parent="Main_Window/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
mouse_filter = 0
text = "Desktop Pet"

[node name="Minimize" type="Button" parent="Main_Window/VBoxContainer/HBoxContainer"]
layout_mode = 2
action_mode = 0
text = " _ "

[node name="Close" type="Button" parent="Main_Window/VBoxContainer/HBoxContainer"]
layout_mode = 2
action_mode = 0
text = " X "

[node name="HBoxContainer2" type="HBoxContainer" parent="Main_Window/VBoxContainer"]
layout_mode = 2
mouse_filter = 0

[node name="VBoxContainer" type="VBoxContainer" parent="Main_Window/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 0

[node name="SpawnButton" type="Button" parent="Main_Window/VBoxContainer/HBoxContainer2/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 0
text = "Spawn"

[node name="CharacterDropdown" type="OptionButton" parent="Main_Window/VBoxContainer/HBoxContainer2/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
clip_text = true
fit_to_longest_item = false
allow_reselect = true

[connection signal="gui_input" from="Main_Window/VBoxContainer/HBoxContainer/TitleBar" to="." method="_on_title_bar_gui_input"]
[connection signal="button_up" from="Main_Window/VBoxContainer/HBoxContainer/Minimize" to="." method="_on_minimize_button_up"]
[connection signal="button_up" from="Main_Window/VBoxContainer/HBoxContainer/Close" to="." method="_on_close_button_up"]
